# dl-quick-train

./: LICENSE  README.md  pyproject.toml  requirements.txt  train.py
dl_quick_train/: __init__.py  pipeline.py
