[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dl-quick-train"
version = "0.1.0"
description = "Experimental faster training for dictionary learning on single GPU machines."
authors = [{name = "Patrick Leask"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "torch",
    "datasets",
    "dictionary-learning",
    "nnsight",
    "tqdm",
    "transformers",
    "wandb",
]

[project.scripts]
dl-quick-train = "dl_quick_train.pipeline:main"
